--- a/WebApp/static/css/fixed_map.css
+++ b/WebApp/static/css/fixed_map.css
@@ -87,3 +87,10 @@
     width: fit-content;
     left: 10px;
 }
+#legend_esi{
+    margin-left: 10px;
+}
+#legends{
+    width: 90%;
+margin:auto;
+}
