--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -22,7 +22,7 @@
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <!-- Custom styles-->
-    <script src="{% static '/js/ajax_calls.js' %}"></script>
+    <script src="{% static '/js/utils.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-minimap/3.6.1/Control.MiniMap.min.js"
             integrity="sha512-WL3nAJlWFKoDShduxQRyY3wkBnQsINXdIfWIW48ZaPgYz1wYNnxIwFMMgigzSgjNBC2WWZ8Y8/sSyUU6abuF0g=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
