--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -25,6 +25,10 @@
             integrity="sha512-PDM7dpetuBcPp2fV/ZyCj9BGV8ybPchsrSzQqVZ3WoM8YcxEa2lAj0n1+4MCRzgsEROmVTwQXGw0IrXCCgH+/Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="{% static 'js/leaflet-providers.js' %}"></script>
+
+    <script src="{% static 'js/utils.js' %}"></script>
+
+    <script src="{% static 'js/basemaps.js' %}"></script>
     <link href="{% static '/css/full_map.css' %}" rel="stylesheet"/>
 
     <script>
