--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -11,7 +11,7 @@
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <!-- Custom styles-->
-    <script src="{% static '/js/ajax_calls.js' %}"></script>
+    <script src="{% static '/js/utils.js' %}"></script>
     <link rel="stylesheet" src="{% static '/css/chart_cserv.css' %}">
 
 {% endblock %}
