--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -25,6 +25,10 @@
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="{% static 'js/leaflet-providers.js' %}"></script>
 
+        <script src="{% static 'js/utils.js' %}"></script>
+
+        <script src="{% static 'js/basemaps.js' %}"></script>
+
 {% endblock %}
 
 {% block content %}
