--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -10,6 +10,8 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+        <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
+
     <!-- Custom styles-->
     <script src="{% static '/js/utils.js' %}"></script>
     <link rel="stylesheet" src="{% static '/css/chart_sqlite.css' %}">
