Reorganizing About Files
Reorganizing About files to match names of the page it describes.

--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -59,7 +59,7 @@
     </div>
 
     <script src="{% static '/js/chart_from_ClimateSERV.js' %}"></script>
-    {% include 'WebApp/cserv_about.html' %}
+    {% include 'WebApp/chart_from_ClimateSERV_about.html' %}
 
 {% endblock %}
 
