--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -59,6 +59,6 @@
     </div>
 
     <script src="{% static '/js/chart_from_SQLite.js' %}"></script>
-    {% include 'WebApp/sqlite_about.html' %}
+    {% include 'WebApp/chart_from_SQLite_about.html' %}
 
 {% endblock %}
