--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -102,6 +102,6 @@
     {#    var bounds_nc={{ netcdf_bounds }};#}
     {#    </script>#}
     <script src="{% static '/js/chart_from_netCDF.js' %}"></script>
-    {% include 'WebApp/netcdf_about.html' %}
+    {% include 'WebApp/chart_from_netCDF_about.html' %}
 
 {% endblock %}
