--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -258,7 +258,7 @@
         </div>
         <br>
     </div>
-    {% include 'WebApp/fixedsize_about.html' %}
+    {% include 'WebApp/map_fixedsize_about.html' %}
 
 {% endblock %}
 
