--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -264,5 +264,5 @@
         <br>
 
     </div>
-    {% include 'WebApp/gee_about.html' %}
+    {% include 'WebApp/map_from_GEE_about.html' %}
 {% endblock %}
