--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -194,5 +194,5 @@
             <link rel="stylesheet" href="{% static 'css/common.css' %}">
         </div>
     </div>
-    {% include 'WebApp/fullscreen_about.html' %}
+    {% include 'WebApp/map_fullscreen_about.html' %}
 {% endblock %}
