--- a/templates/WebApp/update_datamodel.html
+++ b/templates/WebApp/update_datamodel.html
@@ -80,5 +80,5 @@
         </div>
         <br>
     </div>
-    {% include 'WebApp/datamodel_about.html' %}
+    {% include 'WebApp/update_datamodel_about.html' %}
 {% endblock %}
