added search controls to maps

--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -24,6 +24,13 @@
             integrity="sha512-PDM7dpetuBcPp2fV/ZyCj9BGV8ybPchsrSzQqVZ3WoM8YcxEa2lAj0n1+4MCRzgsEROmVTwQXGw0IrXCCgH+/Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="{% static 'js/leaflet-providers.js' %}"></script>
+    <link
+  rel="stylesheet"
+  href="{% static '/css/geosearch.css' %}"
+/>
+    <script src="{% static '/js/geosearch.umd.js' %}"></script>
+        <script src="{% static '/js/geosearch.umd.js.map' %}"></script>
+
 
         <script src="{% static 'js/utils.js' %}"></script>
 
