--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -30,6 +30,13 @@
 
     <script src="{% static 'js/basemaps.js' %}"></script>
     <link href="{% static '/css/full_map.css' %}" rel="stylesheet"/>
+        <link
+  rel="stylesheet"
+  href="{% static '/css/geosearch.css' %}"
+/>
+    <script src="{% static '/js/geosearch.umd.js' %}"></script>
+        <script src="{% static '/js/geosearch.umd.js.map' %}"></script>
+
 
     <script>
         function openNav() {
