removed location tab

--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -101,15 +101,15 @@
                                                                 aria-selected="false"> Legends
                                                         </button>
                                                     </li>
-                                                    <li class="nav-item" role="presentation">
-                                                        <button class="nav-link p-0" id="location-tab"
-                                                                data-bs-toggle="tab"
-                                                                data-bs-target="#location" type="button"
-                                                                role="tab"
-                                                                aria-controls="location"
-                                                                aria-selected="false"> Location
-                                                        </button>
-                                                    </li>
+{#                                                    <li class="nav-item" role="presentation">#}
+{#                                                        <button class="nav-link p-0" id="location-tab"#}
+{#                                                                data-bs-toggle="tab"#}
+{#                                                                data-bs-target="#location" type="button"#}
+{#                                                                role="tab"#}
+{#                                                                aria-controls="location"#}
+{#                                                                aria-selected="false"> Location#}
+{#                                                        </button>#}
+{#                                                    </li>#}
 
                                                 </ul>
                                                 <div class="border-grey bg-white tab-content">
@@ -212,10 +212,10 @@
                                                     <div class="tab-pane" id="legends" role="tabpanel"
                                                          aria-labelledby="legends-tab"><p class="mt-1 ml-2">Legend for
                                                         the layer(s) selected</p></div>
-                                                    <div class="tab-pane p-3 ml-3" id="location"
-                                                         role="tabpanel"
-                                                         aria-labelledby="location_tab"><p>Enter location
-                                                        name and hit Enter to recenter the map</p></div>
+{#                                                    <div class="tab-pane p-3 ml-3" id="location"#}
+{#                                                         role="tabpanel"#}
+{#                                                         aria-labelledby="location_tab"><p>Enter location#}
+{#                                                        name and hit Enter to recenter the map</p></div>#}
 
                                                 </div>
                                             </div>
