--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -107,15 +107,15 @@
                                                                 aria-selected="false"></i> Legends
                                                         </button>
                                                     </li>
-                                                    <li class="nav-item" role="presentation">
-                                                        <button class="nav-link p-0" id="location_gee-tab"
-                                                                data-bs-toggle="tab"
-                                                                data-bs-target="#location_gee" type="button"
-                                                                role="tab"
-                                                                aria-controls="location_gee"
-                                                                aria-selected="false"></i> Location
-                                                        </button>
-                                                    </li>
+{#                                                    <li class="nav-item" role="presentation">#}
+{#                                                        <button class="nav-link p-0" id="location_gee-tab"#}
+{#                                                                data-bs-toggle="tab"#}
+{#                                                                data-bs-target="#location_gee" type="button"#}
+{#                                                                role="tab"#}
+{#                                                                aria-controls="location_gee"#}
+{#                                                                aria-selected="false"></i> Location#}
+{#                                                        </button>#}
+{#                                                    </li>#}
 
                                                 </ul>
                                                 <div class="border-grey bg-white tab-content" id="layer_tab_content_gee"
@@ -216,10 +216,10 @@
                                                         <p class="mt-1">Legend for
                                                             the layer(s) selected</p>
                                                     </div>
-                                                    <div class="tab-pane p-3 ml-3" id="location_gee"
-                                                         role="tabpanel"
-                                                         aria-labelledby="location_gee-tab"><p>Enter location
-                                                        name and hit Enter to recenter the map</p></div>
+{#                                                    <div class="tab-pane p-3 ml-3" id="location_gee"#}
+{#                                                         role="tabpanel"#}
+{#                                                         aria-labelledby="location_gee-tab"><p>Enter location#}
+{#                                                        name and hit Enter to recenter the map</p></div>#}
                                                 </div>
                                             </div>
                                         </div>
