--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -171,21 +171,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="headingFour">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseFour" aria-expanded="false"
-                                    aria-controls="collapseFour">
-                                Search
-                            </button>
-                        </h2>
-                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
-                             data-bs-parent="#accordionExample">
-                            <div class="accordion-body" id="location_full">
-                                <p class="p-3 mb-0">Enter location name and hit Enter to recenter the map</p>
-                            </div>
-                        </div>
-                    </div>
+{#                    <div class="accordion-item">#}
+{#                        <h2 class="accordion-header" id="headingFour">#}
+{#                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"#}
+{#                                    data-bs-target="#collapseFour" aria-expanded="false"#}
+{#                                    aria-controls="collapseFour">#}
+{#                                Search#}
+{#                            </button>#}
+{#                        </h2>#}
+{#                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"#}
+{#                             data-bs-parent="#accordionExample">#}
+{#                            <div class="accordion-body" id="location_full">#}
+{#                                <p class="p-3 mb-0">Enter location name and hit Enter to recenter the map</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
                 </div>
                 <br>
                 <div class="m-auto w-75 text-center">
