--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -57,7 +57,10 @@
                         </div>
                         <div class="accordion" id="fixed_tab_container">
                             <div id="loading_fixed">
-                                <img id="loading-image-fixed" src="{% static 'images/loading.gif' %}" alt="Loading..."/>
+{#                                <img id="loading-image-fixed" src="{% static 'images/loading.gif' %}" alt="Loading..."/>#}
+                                               <div class="spinner-border text-secondary" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header d-flex" id="headingFixed">
