--- a/WebApp/static/css/full_map.css
+++ b/WebApp/static/css/full_map.css
@@ -134,3 +134,13 @@
 html{
     margin: 0; height: 100%; overflow: hidden
 }
+.leaflet-control-geosearch a.leaflet-bar-part:before {
+    border-top: 0;
+}
+a.leaflet-bar-part.leaflet-bar-part-single {
+    background-image: url('../images/search.png') !important;
+    background-size: 18px 18px;
+}
+.leaflet-control-geosearch a.leaflet-bar-part:after {
+    border: 0;
+}
