--- a/WebApp/static/css/gee_map.css
+++ b/WebApp/static/css/gee_map.css
@@ -76,3 +76,13 @@
     height: 100px;
     border: none;
 }
+.leaflet-control-geosearch a.leaflet-bar-part:before {
+    border-top: 0;
+}
+a.leaflet-bar-part.leaflet-bar-part-single {
+    background-image: url('../images/search.png') !important;
+    background-size: 18px 18px;
+}
+.leaflet-control-geosearch a.leaflet-bar-part:after {
+    border: 0;
+}
