--- a/templates/WebApp/app_base.html
+++ b/templates/WebApp/app_base.html
@@ -91,6 +91,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'about' %}">About</a>
                             </li>
+                          <li class="nav-item">
+                                <a class="nav-link" href="{% url 'setup' %}">Setup</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'feedback' %}">Feedback</a>
                             </li>
