--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -34,7 +34,10 @@
                     <!-- Card Body -->
                     <div class="card-body">
                         <div id="loading_sql">
-                            <img id="loading-image-sql" src="{% static 'images/loading.gif' %}" alt="Loading..."/>
+{#                            <img id="loading-image-sql" src="{% static 'images/loading.gif' %}" alt="Loading..."/>#}
+                                           <div class="spinner-border text-secondary" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
                         </div>
                         <label>Select the station to show: </label>
                         <select id="stations">
