--- a/WebApp/static/css/fixed_map.css
+++ b/WebApp/static/css/fixed_map.css
@@ -98,3 +98,13 @@
     width: 90%;
 margin:auto;
 }
+.leaflet-control-geosearch a.leaflet-bar-part:before {
+    border-top: 0;
+}
+a.leaflet-bar-part.leaflet-bar-part-single {
+    background-image: url('../images/search.png') !important;
+    background-size: 18px 18px;
+}
+.leaflet-control-geosearch a.leaflet-bar-part:after {
+    border: 0;
+}
